bug imagen de las noticias arreglado con z-index

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -20,6 +20,7 @@ header{
     left: 0;
     width: 100%;
     background-color: $maincolor;
+    z-index: 99;
 
     a{
         font-weight: 500;
